logs/offboard_pkg/build.make.661.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘void MultiBody::Logging()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:69:17: error: ‘x_file’ was not declared in this scope
   69 |         fprintf(x_file,"%f", local_pose.pose.position.x, local_pose.pose.position.z, );
      |                 ^~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:69:30: error: ‘local_pose’ was not declared in this scope
   69 |         fprintf(x_file,"%f", local_pose.pose.position.x, local_pose.pose.position.z, );
      |                              ^~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:69:86: error: expected primary-expression before ‘)’ token
   69 |         fprintf(x_file,"%f", local_pose.pose.position.x, local_pose.pose.position.z, );
      |                                                                                      ^
make[2]: *** [CMakeFiles/offboard_pkg_node3.dir/build.make:89: CMakeFiles/offboard_pkg_node3.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘void MultiBody::Logging()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:69:17: error: ‘x_file’ was not declared in this scope
   69 |         fprintf(x_file,"%f", local_pose.pose.position.x, local_pose.pose.position.z, );
      |                 ^~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:69:30: error: ‘local_pose’ was not declared in this scope
   69 |         fprintf(x_file,"%f", local_pose.pose.position.x, local_pose.pose.position.z, );
      |                              ^~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:69:86: error: expected primary-expression before ‘)’ token
   69 |         fprintf(x_file,"%f", local_pose.pose.position.x, local_pose.pose.position.z, );
      |                                                                                      ^
make[2]: *** [CMakeFiles/offboard_pkg_node2.dir/build.make:89: CMakeFiles/offboard_pkg_node2.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘void MultiBody::Logging()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:69:17: error: ‘x_file’ was not declared in this scope
   69 |         fprintf(x_file,"%f", local_pose.pose.position.x, local_pose.pose.position.z, );
      |                 ^~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:69:30: error: ‘local_pose’ was not declared in this scope
   69 |         fprintf(x_file,"%f", local_pose.pose.position.x, local_pose.pose.position.z, );
      |                              ^~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:69:86: error: expected primary-expression before ‘)’ token
   69 |         fprintf(x_file,"%f", local_pose.pose.position.x, local_pose.pose.position.z, );
      |                                                                                      ^
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:393: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:204: CMakeFiles/offboard_pkg_node3.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:231: CMakeFiles/offboard_pkg_node2.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
